[gd_scene load_steps=5 format=3 uid="uid://dmd6xuifaq516"]

[ext_resource type="Script" path="res://scripts/coin.gd" id="1_gayie"]
[ext_resource type="Material" uid="uid://usi685kd6e4k" path="res://assets/textures/coin.tres" id="2_oigal"]
[ext_resource type="Texture2D" uid="uid://be4vjersustg8" path="res://assets/textures/coin.png" id="3_ct6k3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ghdyy"]
radius = 24.0

[node name="coin" type="Area2D"]
collision_layer = 2
script = ExtResource("1_gayie")

[node name="Coin" type="Sprite2D" parent="."]
material = ExtResource("2_oigal")
scale = Vector2(0.775, 0.775)
texture = ExtResource("3_ct6k3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ghdyy")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(19, 0)
scale = Vector2(0.5, 1)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
